--- a/ProjectFoxtrot/.editorconfig
+++ b/ProjectFoxtrot/.editorconfig
@@ -1,4 +1,4 @@
 ﻿[*.cs]
 
 # IDE0051: Remove unused private members
-dotnet_diagnostic.IDE0051.severity = silent
+dotnet_diagnostic.IDE0051.severity = none
