Wall jumping from one wall to another added. Auto-sprinting toggle in the controls menu added. Removed that building added in the morning, still requires some polishing.

--- a/ProjectFoxtrot/.vscode/settings.json
+++ b/ProjectFoxtrot/.vscode/settings.json
@@ -55,5 +55,10 @@
     },
     "files.associations": {
         "iostream": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "Behaviour",
+        "Lerp",
+        "Mathf"
+    ]
 }
